--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Luz De Shive</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
@@ -24,7 +24,6 @@
     crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="../node_modules/bootstrap-icons/bootstrap-icons.svg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./WhatsPop/style.css">
   <style>
@@ -51,9 +50,9 @@
           style="font-size: 20px; text-align: center;"></i> <br> Cursos</button>
     </div>
     <div class="item">
-      <button class="btn item" style="color: white ;"><i class="bi bi-person"
+      <a href="./Quem_somos/index.html" class="btn item" style="color: white ;"><i class="bi bi-person"
           style="font-size: 20px; text-align: center;"></i>
-        <br> Quem somos</button>
+        <br> Quem somos</a>
     </div>
   </nav>
 </header>
@@ -121,7 +120,8 @@
       <span class="sr-only"></span>
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     </a>
-    <a href="#carrosel" class="carousel-control-next" role="button" data-bs-slide="next">
+    <a href="#carrosel" class="carousel-control-next" role="button" data-bs-slide="next"
+      style="padding: 100px !important;">
       <span class="sr-only"></span>
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
     </a>
@@ -201,7 +201,7 @@
         </div>
       </div>
       <div class="carousel-item c-il" style="height: 89vh;" data-bs-interval="300000">
-        <div class="overlay-image overlay-c" style="background-image: url(./images/woman-spa-salon.jpg);">
+        <div class="overlay-image overlay-c" style="background-image: url(./images/massage_FourHand.jpg);">
         </div>
         <div class="container container-cB">
           <div class="titulo-d">
@@ -247,18 +247,18 @@
       </div>
     </div>
   </div>
-  <a href="#carrosel-dois" class="carousel-control-prev" role="button" data-bs-slide="prev">
-    <span class="sr-only"></span>
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-  </a>
-  <a href="#carrosel-dois" class="carousel-control-next" role="button" data-bs-slide="next">
-    <span class="sr-only"></span>
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-  </a>
+  <span class="carousel-control-prev" style="bottom: -200px;">
+    <a href="#carrosel-dois" role="button" data-bs-slide="prev" class="carousel-control-prev-icon"
+      aria-hidden="true"></a>
+  </span>
+  <span class="carousel-control-next" role="button" style="bottom: -200px;">
+    <a class="sr-only"></a>
+    <span data-bs-slide="next" href="#carrosel-dois" class="carousel-control-next-icon" aria-hidden="true"></span>
+  </span>
   </div>
   <!-- MODAL                           ////////////////////////////////                 -->
   <div class="modal fade" id="massagemNuru" aria-hidden="true" aria-labelledby="massagemNuruLabel2" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog  modal-dialog-centered">
       <div class="modal-content bg-dark">
         <div class="modal-header">
           <h5 class="modal-title" id="massagemNuruLabel2">Massagem Nuru</h5>
